# vephor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  TODO.md  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
core/: CMakeLists.txt  README.md
core/code/: CMakeLists.txt
core/code/cmake/: vephor-config.cmake.in  vephor-dependencies.cmake  vephorConfig.cmake.in
core/code/examples/: grid_counter.cpp  mini_test_server.cpp  mini_test_show.cpp  mini_test_show_trajectory_camera.cpp  mini_test_show_transparent.cpp  produce_sprites_with_normals.cpp  test_imshow.cpp  test_plot.cpp  test_plot_render.cpp  test_scatter.cpp  test_scatter_set.cpp  test_show.cpp  test_show_two_windows.cpp
core/code/examples/networking/: test_client.cpp  test_client_jsonb.cpp  test_server.cpp  test_server_daemon_jsonb.cpp  test_server_jsonb.cpp
core/code/include/: vephor.h  vephor_ext.h
core/code/include/vephor/base/: camera.h  collision.h  common.h  geometry.h  image.h  io.h  json.h  math.h  mcubes.h  process.h  profiler.h  socket.h  spatial_hash.h  string.h  tensor.h  transforms.h  union_find.h
core/code/include/vephor/ext/: arrow.h  axes.h  button.h  circle.h  cone.h  cube.h  cylinder.h  grid.h  light.h  lines.h  mesh.h  obj_mesh.h  particle.h  plane.h  plot.h  plot3d.h  radio_button_widget.h  sphere.h  sprite.h  text.h  thick_lines.h  widget.h  window.h
core/code/test/unit/: CMakeLists.txt  gtest_geometry.cpp  gtest_union_find.cpp
opengl/: CMakeLists.txt  README.md
opengl/code/: CMakeLists.txt
opengl/code/apps/show/: asset_manager.h  plot3d_camera.cpp  plot3d_camera.h  plot_camera.cpp  plot_camera.h  show.cpp  show_camera.h  show_record.h  show_record_window.cpp  show_record_window.h  spin_camera.h  static_camera.h  trackball_camera.cpp  trackball_camera.h  trajectory_camera.cpp  trajectory_camera.h
opengl/code/cmake/: vephor_opengl-dependencies.cmake
opengl/code/examples/: background_test.cpp  basic.cpp  boilerplate.cpp  camera_test.cpp  just_instanced_points.cpp  just_sphere.cpp  marching_cubes.cpp  material_test.cpp  physics.cpp  physics_constraints.cpp  physics_height_map.cpp  physics_solid.cpp  reflect_test.cpp  screenshot_test.cpp  shadows_test.cpp  skybox_test.cpp  sprites.cpp  thick_lines_test.cpp  trackball_camera_test.cpp  two_windows.cpp
opengl/code/include/: vephor_ogl.h
opengl/code/include/vephor/: mcubes.h  verlet.h
opengl/code/src/: mcubes.cpp  verlet.cpp
opengl/code/src/ogl/: background.cpp  instanced_points.cpp  io.cpp  light.cpp  lines.cpp  mesh.cpp  particle.cpp  points.cpp  sprite.cpp  text.cpp  thick_lines.cpp  window.cpp
opengl/scripts/: create_plot_assets.py
python/: .gitignore  CMakeLists.txt
python/examples/: background.py  basic_2_frame.py  basic_example.py  binary_counter.py  dynamic_example.py  empty_mesh.py  grid_counter.py  key_press_example.py  layout.py  mini_example.py  nan_mesh.py  ogl_direct.py  particles_to_file.py  plot3d_example.py  plot_example.py  plot_example_2.py  plot_x_flip.py  plot_xy_swap.py  record_test.py  record_test_server.py  record_test_server_multiwindow.py  test_imshow.py  text_overlay_example.py  trajectory_camera.py  wait_example.py
python/ext/pybind11/: CMakeLists.txt  noxfile.py  setup.py
python/ext/pybind11/docs/: benchmark.py  conf.py  requirements.txt
python/ext/pybind11/pybind11/: __init__.py  __main__.py  _version.py  commands.py  setup_helpers.py
python/ext/pybind11/tests/: CMakeLists.txt  conftest.py  constructor_stats.h  cross_module_gil_utils.cpp  cross_module_interleaved_error_already_set.cpp  eigen_tensor_avoid_stl_array.cpp  env.py  local_bindings.h  object.h  pybind11_cross_module_tests.cpp  pybind11_tests.cpp  pybind11_tests.h  requirements.txt  test_async.cpp  test_async.py  test_buffers.cpp  test_buffers.py  test_builtin_casters.cpp  test_builtin_casters.py  test_call_policies.cpp  test_call_policies.py  test_callbacks.cpp  test_callbacks.py  test_chrono.cpp  test_chrono.py  test_class.cpp  test_class.py  test_const_name.cpp  test_const_name.py  test_constants_and_functions.cpp  test_constants_and_functions.py  test_copy_move.cpp  test_copy_move.py  test_custom_type_casters.cpp  test_custom_type_casters.py  test_custom_type_setup.cpp  test_custom_type_setup.py  test_docstring_options.cpp  test_docstring_options.py  test_eigen_matrix.cpp  (+57 more)
python/ext/pybind11/tools/: codespell_ignore_lines_from_errors.py  libsize.py  make_changelog.py
python/no-opengl/: README.md  pyproject.toml
python/vephor/: __init__.py  __init__.py.in  main.cpp
vephor/code/: CMakeLists.txt
vephor/code/cmake/: vephorConfig.cmake.in
vephor/code/examples/: mini_test_server.cpp  test_client.cpp  test_imshow.cpp  test_plot_render.cpp  test_server.cpp  test_server_daemon_jsonb.cpp  test_show.cpp  test_show_two_windows.cpp
vephor/code/examples/networking/: test_client_jsonb.cpp
vephor/code/include/: vephor_ext.h
vephor/code/test/unit/: CMakeLists.txt  gtest_geometry.cpp
vephor_opengl/code/: CMakeLists.txt
vephor_opengl/code/apps/show/: plot_camera.cpp  plot_camera.h  show.cpp  show_camera.h  show_record.h  show_record_window.cpp  show_record_window.h  spin_camera.h  static_camera.h  trackball_camera.cpp
vephor_opengl/code/cmake/: vephor_openglConfig.cmake.in
vephor_opengl/code/examples/: background_test.cpp  basic.cpp  marching_cubes.cpp  physics.cpp  physics_constraints.cpp  physics_height_map.cpp  physics_solid.cpp  screenshot_test.cpp  sprites.cpp  two_windows.cpp
vephor_opengl/code/include/vephor/: mcubes.h  verlet.h
vephor_opengl/code/src/: verlet.cpp
vephor_opengl/code/src/ogl/: background.cpp  instanced_points.cpp  io.cpp  light.cpp  lines.cpp  mesh.cpp  particle.cpp  points.cpp  sprite.cpp  text.cpp  thick_lines.cpp  window.cpp
vephor_python/: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
vephor_python/examples/: basic_example.py  binary_counter.py  dynamic_example.py  key_press_example.py  mini_example.py  particles_to_file.py  plot_example.py  test_imshow.py  wait_example.py
vephor_python/pyv4/: __init__.py  main.cpp
(+166 files in other folders)
