#
# Copyright 2025
# Carnegie Robotics, LLC
# 4501 Hatfield Street, Pittsburgh, PA 15201
# https://www.carnegierobotics.com
#
# This source code is licensed under the Apache License, Version 2.0
# found in the LICENSE file in the root directory of this source tree.
#

[project]
name = "vephor"
authors = [
    { name = "Steve Landers", email = "slanders@carnegierobotics.com" },
]
maintainers = [
    { name = "Steve Landers", email = "slanders@carnegierobotics.com" }
]
description = "A headless visualization library."
readme = "README.md"
license = { file = "LICENSE" }
version = "1.0.0"
requires-python = ">=3.7"
dependencies = [
    "numpy"
]

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.16"
cmake.build-type = "Release"
cmake.args = [
    "-DVEPHOR_BUILD_PYTHON_BINDINGS:BOOL=ON"
]
